--- a/Slutprojekt/index.html
+++ b/Slutprojekt/index.html
@@ -6,14 +6,17 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<header>
 
-	<nav class="navbar navbar-light" style="background-color: #59C3C3;">
+	<nav class="navbar navbar-light" style="background-color: #F7F9F9";> 
+	
 		<a class="navbar-brand" href="#">
-			<img src="img/logo.png" width="100" height="100" class="d-inline-block align-top" alt="">
+			<img src="img/logo.png" width="90" height="90" class="d-inline-block align-top" alt="">
+			<span class="log">Tjejhack</span>
 		</a>
-		<h1 class="log">Tjejhack</h1>
-		<img src="img/knuthahn.jpg" width="100" height="100" class="d-inline-block align-top" alt="">
+		<img src="img/knuthahn.jpg" width="90" height="90" class="d-inline-block align-top" alt="">
 	</nav>
+
 	<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
 		<form class="form-inline">
 			<button class="btn btn-success" type="button">Om oss</button>
@@ -21,13 +24,12 @@
 			<button class="btn btn-success" type="button">Quiz</button>
 		</form>
 	</nav>
-	<nav class="navbar navbar-light" style="background-color: white;">
+	</header>
 		<h1>Ladda ner häftet här</h1>
 		<div style="text-align:center;">
 
 			<button type="button" class="btn btn-primary btn-lg" link rel="stylesheet" href="https://docs.google.com/document/d/1wHjENfKS35pxIJBCpY6p1pe8bxh9lJHSridFDkwG3x8/edit?usp=sharing">Ladda ned</button>
 		</div>
-	</nav>
 	<div class="container">
 		<div class="row">
 			<div class="col">
