--- a/Slutprojekt/index.html
+++ b/Slutprojekt/index.html
@@ -1,70 +1,93 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-	<title>Slutprojekt</title>
+	<title>Tjejhack</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
+	<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.3"></script>
+	</head>
+
+	
 	<header>
 
-	<nav class="navbar navbar-light" style="background-color: #F7F9F9";> 
-	
-		<a class="navbar-brand" href="#">
-			<img src="img/logo.png" width="90" height="90" class="d-inline-block align-top" alt="">
-			<span class="log">Tjejhack</span>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<img src="img/logo.png" width="90" height="90" class="d-inline-block align-top" alt="">
+			<span class="log">Tjejhack</span
+			<span class="navbar-toggler-icon"></span>
+
+
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+					<button type="button" class="btn btn-light navtext">Hem</button>
+					</li>
+					<li class="nav-item active">
+					<button type="button" class="btn btn-light navtext">Om oss</button>
+					</li>
+					<li class="nav-item active">
+					<button type="button" class="btn btn-light navtext">Hitta Oss</button
+					</li>
+					<li class="nav-item active">
+					<button type="button" class="btn btn-light navtext">Quiz</button
+					</li>
+				</ul>
+				<a href="#"></a><img class="d-none d-lg-block"src="img/knuthahn.jpg" width="90" height="90" class="d-inline-block align-top" alt="">
 		</a>
-		<img src="img/knuthahn.jpg" width="90" height="90" class="d-inline-block align-top" alt="">
-	</nav>
+				</form>
+			</div>
+		</nav>
 
-	<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-		<form class="form-inline">
-			<button class="btn btn-success" type="button">Om oss</button>
-			<button class="btn btn-success" type="button">Hitta oss</button>
-			<button class="btn btn-success" type="button">Quiz</button>
-		</form>
-	</nav>
-	</header>
-		<h1>Ladda ner häftet här</h1>
-		<div style="text-align:center;">
+</header>
+<body>
+<div style="text-align:center;">
 
-			<button type="button" class="btn btn-primary btn-lg" link rel="stylesheet" href="https://docs.google.com/document/d/1wHjENfKS35pxIJBCpY6p1pe8bxh9lJHSridFDkwG3x8/edit?usp=sharing">Ladda ned</button>
-		</div>
-	<div class="container">
-		<div class="row">
-			<div class="col">
-				<div class="w3-content w3-display-container">
-					<img class="mySlides" src="img/slideshow.jpg" style="width:100%">
-					<img class="mySlides" src="img/slideshow2.jpg" style="width:100%">
+	<button type="button" class="btn btn-primary btn-lg" link rel="stylesheet" href="https://docs.google.com/document/d/1wHjENfKS35pxIJBCpY6p1pe8bxh9lJHSridFDkwG3x8/edit?usp=sharing">Ladda ner häftet här</button>
+</div>
+<div class="container">
+	<div class="row">
+	
+	<div class="fb-page" data-href="https://www.facebook.com/teknist/" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/teknist/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/teknist/">Teknikprogrammet Gymnasieskolan Knut Hahn</a></blockquote></div>
+		<div class="col">
+			<div class="w3-content w3-display-container">
+				<img class="mySlides" src="img/slideshow.jpg" style="width:100%">
+				<img class="mySlides" src="img/slideshow2.jpg" style="width:100%">
 
-					<button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-					<button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
-				</div>
+				<button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+				<button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+			</div>
 
-				<script>
-					var slideIndex = 1;
-					showDivs(slideIndex);
+			<script>
+				var slideIndex = 1;
+				showDivs(slideIndex);
 
-					function plusDivs(n) {
-						showDivs(slideIndex += n);
-					}
+				function plusDivs(n) {
+					showDivs(slideIndex += n);
+				}
 
-					function showDivs(n) {
-						var i;
-						var x = document.getElementsByClassName("mySlides");
-						if (n > x.length) {slideIndex = 1}
-							if (n < 1) {slideIndex = x.length}
-								for (i = 0; i < x.length; i++) {
-									x[i].style.display = "none";  
-								}
-								x[slideIndex-1].style.display = "block";  
+				function showDivs(n) {
+					var i;
+					var x = document.getElementsByClassName("mySlides");
+					if (n > x.length) {slideIndex = 1}
+						if (n < 1) {slideIndex = x.length}
+							for (i = 0; i < x.length; i++) {
+								x[i].style.display = "none";  
 							}
-						</script>
-					</div>
-					<div class="col-3">
+							x[slideIndex-1].style.display = "block";  
+						}
+					</script>
+				</div>
+				<div class="col-3">
 					<h2> Nästa tjejhack är om</h2>
-						<h3 id="demo"></h3>
-						<script>
+					<h3 id="demo"></h3>
+					<script>
 					// Set the date we're counting down to
 					var countDownDate = new Date("May 20, 2019 12:00:00").getTime();
 
@@ -98,7 +121,7 @@
 		</div>
 	</div>
 </head>
-<body>
+
 
 
 
