--- a/Slutprojekt/index.html
+++ b/Slutprojekt/index.html
@@ -10,9 +10,30 @@
 	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.3"></script>
 	
 </head>
-
-
 <header>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-50" src="img/slideshow.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-50" src="img/slideshow2.jpg" alt="Second slide">
+    </div>
+    
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<img src="img/logo.png" width="90" height="90" class="d-inline-block align-top" alt="">
@@ -53,20 +74,35 @@
 		
 <div class="container">
 	 <div class="row">
-		  <div class="col-4">
-					<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fteknist%2F&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-			</div>
-    		<div class="col-8">
-					<div class="w3-content w3-display-container">
-						<img class="mySlides" src="img/slideshow.jpg" style="width:100%">
-						<img class="mySlides" src="img/slideshow2.jpg" style="width:100%">
+		  <div class="col-8">
+		  <h1>Vad är tjejhack?</h1>
+		  <p>Tjejhack Ronneby genomfördes första gången våren 2018 för alla tjejer som går årskurs sju på skolorna i Ronneby kommun. Det är elever som går Teknikprogrammet på Gymnasieskolan Knut Hahn som arrangerar tjejhacket. Syftet är att tjejer i lugn och ro ska få prova på att programmera. Planen är att tjejhack ska bli något vi genomför varje år.</p>
+		  <h3>Bakgrund</h3>
 
-						<button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-						<button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
-					</div>
-			
-			
+			<p>Våren 2018 startade Teknikprogrammet, på Gymnasieskolan Knut Hahn, Tjejhack för alla tjejer som går årskurs sju på skolorna i Ronneby kommun. Det var totalt 160 tjejer som fick komma till Gymnasieskolan Knut Hahn och prova på att programmera i språket Python, träffa kvinnor från näringslivet samt besöka tjejer och lärare på El- och energiprogrammet, Industriprogrammet och Teknikprogrammet. De fick dessutom en goodiebag med godis och reklammaterial från flera lokala företag.
+
+			Det var tjejer och killar på Teknikprogrammet som var mentorer/lärare under tjejhacket och först fick lära sig koda Python själva och sedan planera och genomföra tjejhacket.
+
+			Det första tjejhacket slog så väl ut (ca 95% av tjejerna tyckte det var roligt och intressant) att vi vill fortsätta köra tjejhack för kommande tjejer i årskurs sju. Dock saknar Tjejhack en hemsida som kan vara både mentorer, tjejerna och deras föräldrar till nytta.</p>
+			<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fteknist%2F&tabs=timeline&width=300&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+
+					
 			</div>
+    		<div class="col-4">
+    		<div class="row">
+			  <div>
+			    <div class="card">
+			      <div class="card-body">
+			        <h5 class="card-title">Fredrik Johansson</h5>
+			        <img class="bilder" src="img/frippe.jpg">
+			        <a href="#" class="btn btn-primary">Frippe</a>
+			      </div>
+			    </div>
+			  </div>
+    		</div>
+			
+			
+		</div>
 			
 	</div>
 </div>
