--- a/Slutprojekt/index.html
+++ b/Slutprojekt/index.html
@@ -10,6 +10,7 @@
 	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.3"></script>
 	
 </head>
+<body>
 <header>
 	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 		<ol class="carousel-indicators">
@@ -33,11 +34,12 @@
 				<span class="carousel-control-next-icon" aria-hidden="true"></span>
 				<span class="sr-only">Next</span>
 			</a>
-		</div>
+	</div>
+	</div>
 
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<img src="img/logo.png" width="90" height="90" class="d-inline-block align-top" alt="">
-			<span class="log">Tjejhack</span
+			<span class="log">Tjejhack</span>
 				<span class="navbar-toggler-icon"></span>
 
 
@@ -48,30 +50,30 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active">
-							<a type="button" class="btn btn-light navtext" href="#hem">Hem</a>
+							<a role="button" class="btn btn-light navtext" href="#hem">Hem</a>
 						</li>
 						<li class="nav-item active">
-							<a type="button" class="btn btn-light navtext" href="#hitta">Hitta Oss</a>
+							<a role="button" class="btn btn-light navtext" href="#hitta">Hitta Oss</a>
 						</li>
 						<li class="nav-item active">
-							<a type="button" class="btn btn-light navtext" href="#press"> Press</a>
+							<a role="button" class="btn btn-light navtext" href="#press"> Press</a>
 						</li>
 
 						<li class="nav-item active">
-							<button type="button" class="btn btn-light navtext">Quiz</button
+							<a role="button" class="btn btn-light navtext" href="quiz.html">Quiz</a>
 							</li>
 						</ul>
 						<div style="text-align:center;">
 
-							<button type="button" class="btn btn-primary btn-lg" link rel="stylesheet" href="https://docs.google.com/document/d/1wHjENfKS35pxIJBCpY6p1pe8bxh9lJHSridFDkwG3x8/edit?usp=sharing">Ladda ner häftet här</button>
+							<a role="button" class="btn btn-primary btn-lg">Ladda ner häftet här</a>
 						</div>
-						<a href="#"></a><img class="d-none d-lg-block"src="img/knuthahn.jpg" width="90" height="90" class="d-inline-block align-top" alt="">
-					</a>
-				</form>
+						<a href="#"><img  src="img/knuthahn.jpg" width="90" height="90" class="d-inline-block align-top" alt=""></a>
 			</div>
 		</nav>
-	</header>
-	<body>
+</header>
+<main>
+	
+	
 
 
 		
@@ -100,7 +102,7 @@
 									}
 								</script>
 
-								<h3 id="demo"></h3>
+								<h3 id="demo">...</h3>
 								<script>
 					// Set the date we're counting down to
 					var countDownDate = new Date("May 29, 2019 12:00:00").getTime();
@@ -153,7 +155,7 @@
 						<p>Lärare på Teknikprogrammet<br> 
 							Tel. 0457-61 83 54<br>
 							fredrik.johansson(@)ronneby.se</p>
-							<img class="bilder" src="img/frippe.jpg">
+							<img class="bilder" src="img/frippe.jpg" alt="#">
 						</div>
 					</div>
 					<div class="card hej">
@@ -163,7 +165,7 @@
 							Tel. 0457-61 83 54<br>
 							liselott.lilja(@)ronneby.se</p>
 
-							<img class="bilder" src="img/liselott.png">
+							<img class="bilder" src="img/liselott.png" alt="#">
 						</div>
 					</div>
 				</div>
@@ -175,28 +177,30 @@
 
 <div class="col-sm-7">
 <h2 id="hitta">Hitta Oss</h2>
-<iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8877.421245339248!2d15.2727481!3d56.202819!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe929fb8182a0b18d!2sKnut+Hahnsskolan!5e0!3m2!1ssv!2sse!4v1558697827435!5m2!1ssv!2sse" height="450" width="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+<iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8877.421245339248!2d15.2727481!3d56.202819!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe929fb8182a0b18d!2sKnut+Hahnsskolan!5e0!3m2!1ssv!2sse!4v1558697827435!5m2!1ssv!2sse" height="450" width="300"  style="border:0" allowfullscreen></iframe>
 </div>
 <div class="col-sm-5"> <br><br>
-<iframe class="iframe" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fteknist%2F&amp;tabs=timeline&amp;width=340&amp;height=700&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId"width="100%"height="450" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<iframe class="iframe" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fteknist%2F&amp;tabs=timeline&amp;width=340&amp;height=700&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId" width="100%" height="450" style="border:none;overflow:hidden"  allow="encrypted-media"></iframe>
 </div>
 </div>
 </div>
 <div class="container">
-	<h2 class="press"></h2>
+	<h2 id="press">Press</h2>
 	<div class="row">
-	<div class="col-sm-4">
+	<div class="col-sm-6">
 	<h2>Interview med Frippe</h2>
 	<br>
-	<iframe height="315" src="https://www.youtube.com/embed/fKG6bVItzZQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe height="315" src="https://www.youtube.com/embed/fKG6bVItzZQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
-	<div class="col-sm-5">
+	<div class="col-sm-6">
 	<h4>Är du intresserad av Python? Besök youtube kanalen</h4>
-	<iframe height="315" src="https://www.youtube.com/embed/4CzzGTFxcN4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe height="315" src="https://www.youtube.com/embed/4CzzGTFxcN4"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
 		
 	</div>
 </div>
+</main>
+<footer id="foot">Christian Elzouabi</footer>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
