--- a/Slutprojekt/quiz.html
+++ b/Slutprojekt/quiz.html
@@ -1,13 +1,79 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-	<title>Tjejhacks Bästa Hemsida</title>
-	<link rel="stylesheet" type="text/css" href="style2.css">
+	<title>Tjejhack</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="style2.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
-	<script src="main.js"></script>
+	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.3"></script>
+	
 </head>
-<body>
+	<header>
+	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+		<ol class="carousel-indicators">
+			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+		</ol>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img class="d-block w-100 caroussel" src="img/1.jpg" alt="First slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100 caroussel" src="img/2.jpg" alt="Second slide">
+			</div>
+
+			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<img src="img/logo.png" width="90" height="90" class="d-inline-block align-top" alt="">
+			<span class="log">Tjejhack</span>
+				<span class="navbar-toggler-icon"></span>
+
+
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active">
+							<a type="button" class="btn btn-light navtext" href="index.html">Hem</a>
+						</li>
+						<li class="nav-item active">
+							<a type="button" class="btn btn-light navtext" href="index.html">Hitta Oss</a>
+						</li>
+						<li class="nav-item active">
+							<a type="button" class="btn btn-light navtext" href="index.html"> Press</a>
+						</li>
+
+						<li class="nav-item active">
+							<a type="button" class="btn btn-light navtext" href="quiz.html">Quiz</a>
+							</li>
+						</ul>
+						<div style="text-align:center;">
+						<button type="button" class="btn btn-primary btn-lg" rel="stylesheet" src"https://docs.google.com/document/d/1wHjENfKS35pxIJBCpY6p1pe8bxh9lJHSridFDkwG3x8/edit?usp=sharing">Ladda ner häftet här</button>
+						</div>
+						<a href="#"><img src="img/knuthahn.jpg" width="90" height="90" class="d-inline-block align-top" alt=""></a>
+					
+				</form>
+			</div>
+		</nav>
+	</header>
+	<body>
+	<main>
+	<div class="container">
 <h1>Tjejhacks bästa hemsida!</h1> 
 <form id="quiz" name="quiz">
 
@@ -32,6 +98,18 @@
 <p id = "message"></p>
 <img id = "picture">
 </div>
+</div>
 </html>
+</main>
 
 </body>
+
+<footer id="foot">Christian Elzouabi</footer>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="main.js"type="text/javascript"></script>
+</body>
+</html>
